force-app/main/default/objects/Utility_Bill_Line_Item__c/Utility_Bill_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Utility Bill Line Item</label>
    <nameField>
        <label>Utility Bill Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utility Bill Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>