force-app/main/default/objects/Utility_Bill_Line_Item__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>The amount of the fee. For negative credits, add a &apos;-&apos;.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>