force-app/main/default/objects/Utility_Bill_Line_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Fees &amp; Credits</fullName>
                
                
                    <label>Fees &amp; Credits</label>
                
                </value>
            
                <value>
                
                    <fullName>Transfers</fullName>
                
                
                    <label>Transfers</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>