force-app/main/default/objects/Utility_Bill_Line_Item__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <inlineHelpText>This will group the values by 1 (Default), 2 (of 4), 3 (of 4), 4 (of 4) to sum the values of each</inlineHelpText>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 (Default)</fullName>
                <default>true</default>
                <label>1 (Default)</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>