force-app/main/default/objects/Utility_Bill_Line_Item__c/fields/Production_Update__c.field-meta.xml
<CustomField>
    <fullName>Production_Update__c</fullName>
    <label>Production Update</label>
    <referenceTo>Energy_Usage_Update__c</referenceTo>
    <relationshipLabel>Utility Bill Line Items</relationshipLabel>
    <relationshipName>Utility_Bill_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>