force-app/main/default/objects/Utility_Bill_Line_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>The type of fee that will be applied.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <controllingField>Category__c</controllingField>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Utility Fees/Tax</fullName>
                
                
                    <label>Utility Fees/Tax</label>
                
                </value>
            
                <value>
                
                    <fullName>Utility Credits</fullName>
                
                
                    <label>Utility Credits</label>
                
                </value>
            
                <value>
                
                    <fullName>US Paid to Client</fullName>
                
                
                    <label>US Paid to Client</label>
                
                </value>
            
                <value>
                
                    <fullName>Main Transfer</fullName>
                
                
                    <label>Main Transfer</label>
                
                </value>
            
                <value>
                
                    <fullName>US Payable to Client</fullName>
                
                
                    <label>US Payable to Client</label>
                
                </value>
            
                <value>
                
                    <fullName>Special Transfer</fullName>
                
                
                    <label>Special Transfer</label>
                
                </value>
            
            </valueSetDefinition>
        
        
        
        
        
        
        
        </valueSet>
</CustomField>